# papermind

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  LICENSE_THIRD_PARTY.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: next-steps.md  papermind_status_2026-03-26.md
docs/plans/: next-session.md  recovery_backlog.md  v1.0-overnight.md  v5-ui-rewrite.md
docs/wiki/: agent-integration.md  citation-graph.md  fetching-papers.md  getting-started.md  knowledge-maintenance.md  packages-and-codebases.md  searching.md
scripts/: run_deleted_recovery.sh
skills/papermind/: SKILL.md
src/hydrofound/: __init__.py  config.py  mcp_server.py
src/papermind/: __init__.py  aliases.yaml  api_diff.py  auto_cite.py  config.py  crossref.py  db.py  equation_map.py  explain.py  glossary.yaml  integrity.py  mcp_server.py  memory.py  profile.py  provenance.py  recovery.py  references.py  repair.py  report.py  session.py  sharing.py  tagging.py  verify.py  watch.py
tests/: conftest.py  test_aliases.py  test_api_diff.py  test_audit.py  test_auto_cite.py  test_brief.py  test_chat.py  test_cli_catalog.py  test_cli_doctor.py  test_cli_ingest.py  test_cli_init.py  test_cli_related.py  test_config.py  test_context_pack.py  test_crossref.py  test_db.py  test_e2e.py  test_equation_map.py  test_equations.py  test_explain.py  test_mcp_server.py  test_memory.py  test_offline.py  test_profile.py  test_provenance.py  test_recovery.py  test_references.py  test_reindex.py  test_report.py  test_session.py  test_sharing.py  test_tagging.py  test_verify.py  test_watch.py
tests/test_api/: conftest.py  test_endpoints.py
tests/test_catalog/: test_index.py  test_render.py
tests/test_discovery/: test_citations.py  test_downloader.py  test_exa.py  test_orchestrator.py  test_semantic_scholar.py  test_unpaywall.py
tests/test_ingestion/: test_codebase.py  test_codebase_render.py  test_common.py  test_glm_ocr.py  test_markdown.py  test_package.py  test_package_ingest.py  test_paper.py  test_paper_batch.py  test_validation.py  (+1 more)
(+109 files in other folders)
